changes made to vue

--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "fitness-tracker",
   "version": "1.0.0",
-  "description": "",
+  "description": "fitness-tracker",
   "main": "index.js",
   "scripts": {
     "start": "node server/index.js",
-    "dev": "nodemon server/index.js"
+    "dev": "nodemon server/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "4.17.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "nodemon": "2.0.2"
   },
   "repository": {
     "type": "git",
